force-app/main/default/objects/Other_Meetings__c/Other_Meetings__c.object-meta.xml
<CustomObject>
    <label>Other Meeting</label>
    <nameField>
        <label>Other Meetings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Other Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>