force-app/main/default/objects/Other_Meetings__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <inlineHelpText>Skriv hvor mange minutter dit møde varede</inlineHelpText>
    <label>Duration in minutes</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>