force-app/main/default/objects/Other_Meetings__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Other Meetings</relationshipLabel>
    <relationshipName>Other_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>