force-app/main/default/objects/Other_Meetings__c/fields/M_detype__c.field-meta.xml
<CustomField>
    <fullName>M_detype__c</fullName>
    <label>Mødetype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onlinemøde</fullName>
            </value>
            <value>
                <fullName>Kundebesøg på kontoret</fullName>
            </value>
            <value>
                <fullName>Hjemmebesøg</fullName>
            </value>
            <value>
                <fullName>Egen telefon (Problemer i Salesforce)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>