force-app/main/default/objects/Other_Meetings__c/listViews/Today1.listView-meta.xml
<ListView>
    <fullName>Today1</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Lead__c</columns>
    <columns>M_detype__c</columns>
    <columns>Duration__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today1</label>
</ListView>